--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,12 +1,13 @@
+git
 pip
 python3
+usbguard
 usbutils
 udisks2
-usbguard
-lsscsi
-ewf-tools
 clamav
 clamav-daemon
-clamtk
-zip
 scalpel
+lsscsi
+ewf-tools
+zip
+clamtk
